# nanoVLM-lite

./: .gitignore  README.md  pyproject.toml
results/: baseline_flops.json  baseline_results.json
results/aokvqa_finetuned/: res512.json
results/baseline/: res256.json  res512.json
results/finetuned/: res256.json
results/finetuned_vit_frozen/: res512.json
results/token_pooling/: token_pooling_adaptive_grid2_results.json  token_pooling_adaptive_grid4_results.json  token_pooling_adaptive_grid8_results.json  token_pooling_avg_k2_s2_results.json  token_pooling_avg_k4_s4_results.json  token_pooling_max_k2_s2_results.json  token_pooling_max_k4_s4_results.json
scripts/: 1-setup.sh  2-baseline.sh  2-evaluate.sh  3-flop-counter.sh  4-finetune-mcq.sh  5-token-pooling.sh  common.sh
src/evaluation/: __init__.py  base_evaluator.py  baseline.py  evaluate.py  evaluate_token_pooling.py  flop_counter.py
src/finetuning/: __init__.py  finetune_mcq.py  utils.py
test/: README.md  test_query.txt
