[project]
name = "nanovlm-lite"
version = "0.1.0"
description = "A lightweight, optimized version of nanoVLM for efficient visual question answering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "fvcore>=0.1.5.post20221221",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
